add GET /users/me/subscriptions
